[project]
name = "cmeel-cppadcodegen"
version = "2.4.3"
description = "cmeel distribution for CppADCodeGen, Source Code Generation for Automatic Differentiation using Operator Overloading"
readme = "README.md"
requires-python = ">= 3.7"
license = "EPL-1.0"
dependencies = ["cmeel-cppad"]

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-cppadcodegen"
repository = "https://github.com/cmake-wheel/cmeel-cppadcodegen.git"

[tool.cmeel]
build-number = 2
configure-args = ["-DGOOGLETEST_GIT=ON"]
source = "CppADCodeGen"

[build-system]
requires = ["cmeel[build]", "cmeel-cppad"]
build-backend = "cmeel.build"
