[build-system]
build-backend = "cmeel.build"
requires = ["cmeel-cppad", "cmeel[build]"]

[project]
dependencies = ["cmeel-cppad"]
description = "cmeel distribution for CppADCodeGen, Source Code Generation for Automatic Differentiation using Operator Overloading"
license = "EPL-1.0"
name = "cmeel-cppadcodegen"
requires-python = ">= 3.7"
version = "2.4.3"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-cppadcodegen"
repository = "https://github.com/cmake-wheel/cmeel-cppadcodegen.git"

[tool.cmeel]
build-number = 3
configure-args = ["-DGOOGLETEST_GIT=ON"]
py3-none = true
source = "CppADCodeGen"

[tool.tomlsort]
all = true
