[build-system]
build-backend = "cmeel"
requires = ["cmeel-cppad", "cmeel[build]"]

[project]
dependencies = ["cmeel-cppad"]
description = "cmeel distribution for CppADCodeGen, Source Code Generation for Automatic Differentiation using Operator Overloading"
license = "EPL-1.0"
name = "cmeel-cppadcodegen"
requires-python = ">= 3.8"
version = "2.4.3"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-cppadcodegen"
repository = "https://github.com/cmake-wheel/cmeel-cppadcodegen.git"

[tool.cmeel]
any = true
build-number = 4
configure-args = ["-DGOOGLETEST_GIT=ON"]
run-tests = false
source = "CppADCodeGen"

[tool.tomlsort]
all = true
